// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ AccountSetupCard ]] [[ AccountSetupCard Activate Repo ]]: Snapshot: Activate Repo 1`] = `
"<div class=\\"col-span-1 rounded-md border border-slate-400 xl:col-span-2\\">
  <div class=\\"p-2\\">Account setup is 45% complete</div>
  <div class=\\"h-1 w-full bg-ink-200\\">
    <div class=\\"h-1 transform bg-juniper transition-all duration-100 ease-in-out\\" style=\\"width: 45%;\\"></div>
  </div>
  <div class=\\"space-y-6 p-4\\">
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Activate a repository
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">This will enable continuous analysis on your repository on every commit and pull-request</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Activate repo
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Autofix
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Fix hundreds of issues in your code in a couple of clicks, automatically.</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"autofix\\">
          Install Autofix
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Invite your team
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">DeepSource is better with your teammates. Ask them to join the party!</p>
        <div>
          <z-button icon=\\"user-plus\\" button-type=\\"secondary\\" size=\\"small\\">Invite team</z-button>
          <portal-stub to=\\"modal\\">
            <!---->
            <!---->
          </portal-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Transformers
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Put your code-formatting on complete autopilot. It's magical!</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Setup Transformers
        </z-button>
      </div>
    </div>
  </div>
  <addrepomodal-stub defaultactivetab=\\"0\\" showautoonboard=\\"true\\" showmonorepo=\\"true\\" analyzershortcode=\\"\\" transformershortcode=\\"\\" showmodal=\\"true\\"></addrepomodal-stub>
  <!---->
</div>"
`;

exports[`[[ AccountSetupCard ]] [[ AccountSetupCard Install Autofix ]]: Snapshot: Install Autofix 1`] = `
"<div class=\\"col-span-1 rounded-md border border-slate-400 xl:col-span-2\\">
  <div class=\\"p-2\\">Account setup is 45% complete</div>
  <div class=\\"h-1 w-full bg-ink-200\\">
    <div class=\\"h-1 transform bg-juniper transition-all duration-100 ease-in-out\\" style=\\"width: 45%;\\"></div>
  </div>
  <div class=\\"space-y-6 p-4\\">
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Activate a repository
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">This will enable continuous analysis on your repository on every commit and pull-request</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Activate repo
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Autofix
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Fix hundreds of issues in your code in a couple of clicks, automatically.</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"autofix\\">
          Install Autofix
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Invite your team
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">DeepSource is better with your teammates. Ask them to join the party!</p>
        <div>
          <z-button icon=\\"user-plus\\" button-type=\\"secondary\\" size=\\"small\\">Invite team</z-button>
          <portal-stub to=\\"modal\\">
            <!---->
            <!---->
          </portal-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Transformers
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Put your code-formatting on complete autopilot. It's magical!</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Setup Transformers
        </z-button>
      </div>
    </div>
  </div>
  <addrepomodal-stub defaultactivetab=\\"0\\" showautoonboard=\\"true\\" showmonorepo=\\"true\\" analyzershortcode=\\"\\" transformershortcode=\\"\\"></addrepomodal-stub>
  <installautofixmodal-stub></installautofixmodal-stub>
</div>"
`;

exports[`[[ AccountSetupCard ]] [[ AccountSetupCard Invite Member ]]: Snapshot: Invite Member 1`] = `
"<div class=\\"col-span-1 rounded-md border border-slate-400 xl:col-span-2\\">
  <div class=\\"p-2\\">Account setup is 45% complete</div>
  <div class=\\"h-1 w-full bg-ink-200\\">
    <div class=\\"h-1 transform bg-juniper transition-all duration-100 ease-in-out\\" style=\\"width: 45%;\\"></div>
  </div>
  <div class=\\"space-y-6 p-4\\">
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Activate a repository
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">This will enable continuous analysis on your repository on every commit and pull-request</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Activate repo
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Autofix
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Fix hundreds of issues in your code in a couple of clicks, automatically.</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"autofix\\">
          Install Autofix
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Invite your team
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">DeepSource is better with your teammates. Ask them to join the party!</p>
        <div>
          <z-button icon=\\"user-plus\\" button-type=\\"secondary\\" size=\\"small\\">Invite team</z-button>
          <portal-stub to=\\"modal\\">
            <z-modal primary-action-label=\\"\\" title=\\"Invite new members\\">
              <div class=\\"space-y-4 p-4 text-sm font-normal\\">
                <!---->
                <!---->
                <div class=\\"space-y-2\\">
                  <div class=\\"flex items-start justify-between\\">
                    <div>
                      <h3 class=\\"text-base font-medium text-vanilla-100\\">Invite via link</h3>
                      <p class=\\"text-sm text-vanilla-400\\">
                        Teammates will create an account via the link
                      </p>
                    </div>
                    <div>
                      <z-button button-type=\\"secondary\\" icon=\\"refresh-cw\\" size=\\"small\\">
                        Reset Link
                      </z-button>
                    </div>
                  </div>
                  <z-input disabled=\\"true\\" show-border=\\"true\\" value=\\"https://deepsource.icu/invitation/5cnHJHRUdbbpts2ZeiBa-20oabC_W_/\\"></z-input>
                </div>
              </div>
            </z-modal>
            <!---->
          </portal-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Transformers
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Put your code-formatting on complete autopilot. It's magical!</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Setup Transformers
        </z-button>
      </div>
    </div>
  </div>
  <addrepomodal-stub defaultactivetab=\\"0\\" showautoonboard=\\"true\\" showmonorepo=\\"true\\" analyzershortcode=\\"\\" transformershortcode=\\"\\"></addrepomodal-stub>
  <!---->
</div>"
`;

exports[`[[ AccountSetupCard ]] [[ AccountSetupCard Start Transformers ]]: Snapshot: Start Transformers 1`] = `
"<div class=\\"col-span-1 rounded-md border border-slate-400 xl:col-span-2\\">
  <div class=\\"p-2\\">Account setup is 45% complete</div>
  <div class=\\"h-1 w-full bg-ink-200\\">
    <div class=\\"h-1 transform bg-juniper transition-all duration-100 ease-in-out\\" style=\\"width: 45%;\\"></div>
  </div>
  <div class=\\"space-y-6 p-4\\">
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Activate a repository
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">This will enable continuous analysis on your repository on every commit and pull-request</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Activate repo
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Autofix
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Fix hundreds of issues in your code in a couple of clicks, automatically.</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"autofix\\">
          Install Autofix
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Invite your team
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">DeepSource is better with your teammates. Ask them to join the party!</p>
        <div>
          <z-button icon=\\"user-plus\\" button-type=\\"secondary\\" size=\\"small\\">Invite team</z-button>
          <portal-stub to=\\"modal\\">
            <!---->
            <!---->
          </portal-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Transformers
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Put your code-formatting on complete autopilot. It's magical!</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Setup Transformers
        </z-button>
      </div>
    </div>
  </div>
  <addrepomodal-stub defaultactivetab=\\"0\\" showautoonboard=\\"true\\" showmonorepo=\\"true\\" analyzershortcode=\\"\\" transformershortcode=\\"\\"></addrepomodal-stub>
  <!---->
</div>"
`;

exports[`[[ AccountSetupCard ]] renders AccountSetupCard 1`] = `
"<div class=\\"col-span-1 rounded-md border border-slate-400 xl:col-span-2\\">
  <div class=\\"p-2\\">Account setup is 45% complete</div>
  <div class=\\"h-1 w-full bg-ink-200\\">
    <div class=\\"h-1 transform bg-juniper transition-all duration-100 ease-in-out\\" style=\\"width: 45%;\\"></div>
  </div>
  <div class=\\"space-y-6 p-4\\">
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Activate a repository
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">This will enable continuous analysis on your repository on every commit and pull-request</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Activate repo
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Autofix
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Fix hundreds of issues in your code in a couple of clicks, automatically.</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"autofix\\">
          Install Autofix
        </z-button>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Invite your team
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">DeepSource is better with your teammates. Ask them to join the party!</p>
        <div>
          <z-button icon=\\"user-plus\\" button-type=\\"secondary\\" size=\\"small\\">Invite team</z-button>
          <portal-stub to=\\"modal\\">
            <!---->
            <!---->
          </portal-stub>
        </div>
      </div>
    </div>
    <div class=\\"flex items-start space-x-2\\">
      <div class=\\"grid h-4 w-4 flex-shrink-0 place-content-center rounded-full border-2 border-slate-400\\" style=\\"stroke-width: 4;\\">
        <!---->
      </div>
      <div class=\\"space-y-2\\">
        <h5 class=\\"leading-none text-vanilla-200\\">
          Start using Transformers
        </h5>
        <p class=\\"text-sm text-vanilla-400\\">Put your code-formatting on complete autopilot. It's magical!</p>
        <z-button size=\\"small\\" button-type=\\"secondary\\" icon=\\"plus\\">
          Setup Transformers
        </z-button>
      </div>
    </div>
  </div>
  <addrepomodal-stub defaultactivetab=\\"0\\" showautoonboard=\\"true\\" showmonorepo=\\"true\\" analyzershortcode=\\"\\" transformershortcode=\\"\\"></addrepomodal-stub>
  <!---->
</div>"
`;
